eksconnect/base/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-petclinic
