eksconnect/base/petclinic/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-petclinic
spec:
  host: ''
  path: '/'
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  port:
    targetPort: 8080-tcp
status:
  ingress:
  - host: ''
